# autonomous-research-agent

./: .env.example  main.py  pyproject.toml
config/: __init__.py  config.py
new-notebook/: Exp_1.ipynb
notebook/: Exp_1.ipynb
src/autonomous_research_agent/utils/: logging_config.py
src/fetcher/: __init__.py  arvix_search.py  arxiv_search.py
